--- a/src/web.public/package.json
+++ b/src/web.public/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon --debug start.js"
+    "start": "nodemon --debug server.js"
   },
   "dependencies": {
     "body-parser": "~1.0.0",
