--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -12,7 +12,8 @@
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-bunyan-logger": "^1.0.0",
-    "morgan": "~1.0.0"
+    "morgan": "~1.0.0",
+    "string": "^1.9.1"
   },
   "devDependencies": {},
   "engines": {
