--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon --debug server.js"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "~1.0.0",
     "bunyan": "^1.0.0",
     "cheerio": "^0.17.0",
