--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-angular-templatecache": "^1.3.0",
     "gulp-buffer": "0.0.2",
     "gulp-cdnizer": "^1.0.0-beta2",
+    "gulp-concat": "^2.3.4",
     "gulp-imagemin": "^1.0.0",
     "gulp-inject": "^1.0.1",
     "gulp-jshint": "^1.8.4",
@@ -29,12 +30,16 @@
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-css": "^0.3.7",
     "gulp-minify-html": "^0.1.4",
+    "gulp-ng-annotate": "^0.3.0",
+    "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^1.0.0",
     "gulp-rimraf": "^0.1.0",
     "gulp-size": "^1.0.0",
+    "gulp-sourcemaps": "^1.1.1",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^0.3.1",
+    "gulp-using": "0.0.1",
     "gulp-util": "^3.0.0",
     "jshint-stylish": "^0.4.0",
     "promise": "^5.0.0",
