--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-minify-css": "^0.3.7",
     "gulp-minify-html": "^0.1.4",
     "gulp-ng-annotate": "^0.3.0",
+    "gulp-ng-constant": "^0.1.1",
     "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^1.0.0",
@@ -42,6 +43,7 @@
     "gulp-using": "0.0.1",
     "gulp-util": "^3.0.0",
     "jshint-stylish": "^0.4.0",
+    "memory-streams": "0.0.3",
     "promise": "^5.0.0",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2"
