--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "gulp-minify-html": "^0.1.4",
     "gulp-ng-annotate": "^0.3.0",
     "gulp-ng-constant": "^0.1.1",
+    "gulp-plumber": "^0.6.5",
     "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^1.0.0",
     "gulp-rimraf": "^0.1.0",
+    "gulp-sass": "^0.7.3",
     "gulp-size": "^1.0.0",
     "gulp-sourcemaps": "^1.1.1",
     "gulp-streamify": "0.0.5",
