Move db to dev and refactor connection code

--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -2,7 +2,7 @@
   "development": {
       "test": "test dev",
       "connectionString": {
-          "appakin": "postgres://localhost/appakin"
+          "appakin": "postgres://appakin:appakin@appakin-dev/appakin"
       }
   },
   "production": {
