--- a/src/web.public/bower.json
+++ b/src/web.public/bower.json
@@ -10,7 +10,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.23",
-    "normalize.scss": "~3.0.1+normalize.3.0.1"
+    "angular": "~1.2.23"
   }
 }
