--- a/src/web.public/package.json
+++ b/src/web.public/package.json
@@ -14,6 +14,7 @@
     "express-bunyan-logger": "^1.0.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "serve-favicon": "^2.1.1",
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {},
