--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -11,6 +11,7 @@
     "bunyan": "^1.0.1",
     "cheerio": "^0.17.0",
     "cookie-parser": "~1.0.1",
+    "cors": "^2.4.2",
     "crawler": "^0.2.7",
     "debug": "~0.7.4",
     "express": "~4.2.0",
