--- a/src/web.public/package.json
+++ b/src/web.public/package.json
@@ -9,7 +9,7 @@
     "body-parser": "~1.0.0",
     "bunyan": "^1.0.0",
     "cookie-parser": "~1.0.1",
-    "debug": "~0.7.4",
+    "debug": "^0.7.4",
     "express": "~4.2.0",
     "express-bunyan-logger": "^1.0.0",
     "jade": "~1.3.0",
