--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -3,7 +3,7 @@
       "test": "test dev",
       "connectionString": {
           "appakin-dev": "postgres://appakin:appakin@appakin-dev/appakin",
-          "appakin": "postgres://postgres:password@localhost/appakin"
+          "appakin": "postgres://localhost/appakin"
       },
       "search": {
           "solr": {
