--- a/src/web.public/bower.json
+++ b/src/web.public/bower.json
@@ -10,9 +10,11 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.23"
-  },
-  "resolutions": {
-    "angular": "1.3.0-rc.1"
+    "angular": "~1.3.0-rc.3",
+    "angular-cookies": "~1.3.0-rc.3",
+    "angular-resource": "~1.3.0-rc.3",
+    "angular-route": "~1.3.0-rc.3",
+    "angular-sanitize": "~1.3.0-rc.3",
+    "angular-touch": "~1.3.0-rc.3"
   }
 }
