--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.0.0",
     "natural": "^0.1.28",
     "node-uuid": "^1.4.1",
+    "node.extend": "^1.1.2",
     "pg": "^3.4.3",
     "request": "^2.40.0",
     "slug": "^0.5.0",
