--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -22,6 +22,7 @@
     "node-uuid": "^1.4.1",
     "node.extend": "^1.1.2",
     "pg": "^3.4.3",
+    "recluster": "^0.3.7",
     "request": "^2.40.0",
     "slug": "^0.5.0",
     "slugid": "^1.0.2",
