Audit App Store referrals

--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -24,6 +24,9 @@
                     "app": "appakin_app"
                 }
             }
+        },
+        "itunes": {
+            "affiliateId": "10lNjB"
         }
     },
     "development": {
