Add category clustering constants and stopwords

--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -24,7 +24,8 @@
                     "app": "appakin_app",
                     "cluster": "appakin_cluster"
                 }
-            }
+            },
+            "stopwordFile": "domain/search/stopwords_en.txt"
         },
         "itunes": {
             "affiliateId": "10lNjB"
