--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -28,6 +28,8 @@
     "slug": "^0.5.0",
     "slugid": "^1.0.2",
     "solr-client": "^0.3.0",
+    "spellcheck": "0.0.4",
+    "spellchecker": "^1.0.1",
     "string": "^1.9.1",
     "unidecode": "^0.1.3",
     "validator": "^3.22.0"
