--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -20,6 +20,7 @@
     "line-reader": "^0.2.4",
     "morgan": "~1.0.0",
     "natural": "^0.1.28",
+    "node-svm": "^1.3.0",
     "node-uuid": "^1.4.1",
     "node.extend": "^1.1.2",
     "pg": "^3.4.3",
