--- a/src/web.public/package.json
+++ b/src/web.public/package.json
@@ -12,6 +12,8 @@
     "debug": "^0.7.4",
     "express": "~4.2.0",
     "express-bunyan-logger": "^1.0.0",
+    "gulp-load-plugins": "^0.7.1",
+    "gulp-util": "^3.0.1",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "serve-favicon": "^2.1.1",
