--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -14,6 +14,14 @@
         "log": {
             "level": "info"
         },
+        "cache": {
+            "redis": {
+                "enabled": false,
+                "host": "127.0.0.1",
+                "port": "6379",
+                "retryConnectionMs": 1000
+            }
+        },
         "search": {
             "solr": {
                 "host": "localhost",
