--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -16,6 +16,7 @@
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-bunyan-logger": "^1.0.0",
+    "hiredis": "^0.1.17",
     "languagedetect": "^1.1.1",
     "line-reader": "^0.2.4",
     "morgan": "~1.0.0",
@@ -25,6 +26,7 @@
     "node.extend": "^1.1.2",
     "pg": "^3.4.3",
     "recluster": "^0.3.7",
+    "redis": "^0.12.1",
     "request": "^2.40.0",
     "slug": "^0.5.0",
     "slugid": "^1.0.2",
