--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.0.0",
     "bunyan": "^1.0.1",
     "cheerio": "^0.17.0",
+    "compute.io": "^0.99.0",
     "cookie-parser": "~1.0.1",
     "cors": "^2.4.2",
     "crawler": "^0.2.7",
