Switch to Winston logger

--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -66,6 +66,11 @@
         "cluster": {
             "enabled": true,
             "workers": "cpu_count"
+        },
+        "cache": {
+            "redis": {
+                "enabled": true
+            }
         }
     }
 }
