--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -17,6 +17,7 @@
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-bunyan-logger": "^1.0.0",
+    "express-winston": "^0.2.9",
     "hiredis": "^0.1.17",
     "languagedetect": "^1.1.1",
     "line-reader": "^0.2.4",
@@ -36,7 +37,8 @@
     "spellchecker": "^1.0.1",
     "string": "^1.9.1",
     "unidecode": "^0.1.3",
-    "validator": "^3.22.0"
+    "validator": "^3.22.0",
+    "winston": "^0.8.3"
   },
   "devDependencies": {},
   "engines": {
