--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -38,7 +38,8 @@
     "string": "^1.9.1",
     "unidecode": "^0.1.3",
     "validator": "^3.22.0",
-    "winston": "^0.8.3"
+    "winston": "^0.8.3",
+    "yargs": "^1.3.3"
   },
   "devDependencies": {},
   "engines": {
