--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -39,6 +39,7 @@
     "unidecode": "^0.1.3",
     "validator": "^3.22.0",
     "winston": "^0.8.3",
+    "wrench": "^1.5.8",
     "yargs": "^1.3.3"
   },
   "devDependencies": {},
