--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -27,6 +27,7 @@
     "node-uuid": "^1.4.1",
     "node.extend": "^1.1.2",
     "pg": "^3.4.3",
+    "pretty-hrtime": "^1.0.0",
     "recluster": "^0.3.7",
     "redis": "^0.12.1",
     "request": "^2.40.0",
