--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -26,11 +26,13 @@
     "node-svm": "^1.3.0",
     "node-uuid": "^1.4.1",
     "node.extend": "^1.1.2",
+    "nodehun": "^1.0.0",
     "pg": "^3.4.3",
     "pretty-hrtime": "^1.0.0",
     "recluster": "^0.3.7",
     "redis": "^0.12.1",
     "request": "^2.40.0",
+    "simple-lru-cache": "0.0.1",
     "slug": "^0.5.0",
     "slugid": "^1.0.2",
     "solr-client": "^0.3.0",
@@ -42,6 +44,7 @@
     "winston": "^0.8.3",
     "wrench": "^1.5.8",
     "yargs": "^1.3.3"
+    "xregexp": "^2.0.0"
   },
   "devDependencies": {},
   "engines": {
