--- a/src/web.api/package.json
+++ b/src/web.api/package.json
@@ -43,7 +43,7 @@
     "validator": "^3.22.0",
     "winston": "^0.8.3",
     "wrench": "^1.5.8",
-    "yargs": "^1.3.3"
+    "yargs": "^1.3.3",
     "xregexp": "^2.0.0"
   },
   "devDependencies": {},
