--- a/src/es.admin/package.json
+++ b/src/es.admin/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon --debug server.js"
+    "start": "nodemon --debug=5859 server.js"
   },
   "dependencies": {
     "async": "^0.9.0",
