--- a/src/es.admin/config-env.json
+++ b/src/es.admin/config-env.json
@@ -23,7 +23,8 @@
     },
     "es": {
       "host": "localhost",
-      "port": "9200"
+      "port": "9200",
+      "maxSockets": 100
     }
   },
   "development": {
