Add snapshot restore subscriber notifications

--- a/src/es.admin/config-env.json
+++ b/src/es.admin/config-env.json
@@ -25,7 +25,8 @@
       "host": "localhost",
       "port": "9200",
       "maxSockets": 100
-    }
+    },
+    "restoreSubscribers": []
   },
   "development": {
     "log": {
