--- a/src/es.admin/package.json
+++ b/src/es.admin/package.json
@@ -18,6 +18,7 @@
     "pg": "^3.4.3",
     "pretty-hrtime": "^1.0.0",
     "q": "^1.2.0",
+    "request": "^2.55.0",
     "string": "^1.9.1",
     "unidecode": "^0.1.3",
     "winston": "^0.8.3",
