Rename restore subscribers to snapshot subscriber

--- a/src/es.admin/config-env.json
+++ b/src/es.admin/config-env.json
@@ -26,7 +26,7 @@
       "port": "9200",
       "maxSockets": 100
     },
-    "restoreSubscribers": []
+    "snapshotSubscribers": []
   },
   "development": {
     "log": {
