--- a/src/admin.api/package.json
+++ b/src/admin.api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-api",
+  "name": "admin-api",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,23 +9,33 @@
     "async": "^0.9.0",
     "body-parser": "~1.0.0",
     "bunyan": "^1.0.1",
+    "cheerio": "^0.17.0",
+    "compute.io": "^0.99.0",
     "cookie-parser": "~1.0.1",
     "cors": "^2.4.2",
+    "crawler": "^0.2.7",
     "express": "~4.2.0",
     "express-bunyan-logger": "^1.0.0",
     "express-winston": "^0.2.9",
+    "languagedetect": "^1.1.1",
+    "natural": "^0.1.29",
+    "nlp_compromise": "^0.3.4",
+    "node-svm": "git://github.com/devodo/node-svm.git#1.3.0",
     "node-uuid": "^1.4.1",
     "node.extend": "^1.1.2",
     "pg": "^3.4.3",
+    "pretty-hrtime": "^1.0.0",
     "recluster": "^0.3.7",
-    "redis": "^0.12.1",
     "request": "^2.40.0",
     "slug": "^0.5.0",
     "slugid": "^1.0.2",
+    "solr-client": "^0.3.0",
+    "spellcheck": "0.0.5",
     "string": "^1.9.1",
     "unidecode": "^0.1.3",
     "validator": "^3.22.0",
     "winston": "^0.8.3",
+    "xregexp": "^2.0.0",
     "yargs": "^1.3.3"
   },
   "devDependencies": {},
