Point web.api to new web db

--- a/src/web.api/config-env.json
+++ b/src/web.api/config-env.json
@@ -58,7 +58,7 @@
     "production": {
         "test": "test production",
         "connectionString": {
-            "appakin": "postgres://appakin:password@localhost/appakin"
+            "appakin": "postgres://appakin:password@localhost/appakin_web"
         },
         "cluster": {
             "enabled": true,
